--- a/playground/component.html
+++ b/playground/component.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <div id="app">
         <app-header></app-header>
         <app-content></app-content>
+        <app-footer></app-footer>
+    </div>
+
+    <div id="app2">
+        <app-header></app-header>
+        <app-footer></app-footer>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
         //전역 컴포넌트
+        // Vue.component('컴포넌트 이름', 컴포넌트 내용);
         Vue.component('app-header', {
             template: '<h1>Header</h1>'
         });
@@ -23,8 +32,27 @@
         })
 
         new Vue({
-            el: '#app'
+            el: '#app',
+            //지역 컴포넌트 등록 방식
+            components: {
+                // '컴포넌트 이름':컴포넌트 내용
+                // components -> s가 붙는 이유 
+                // 원어민 입장에서 여러개가 들어가는건 s가 붙음 ㅎㅎㅎ
+                'app-footer': {
+                    template: '<footer>Footer</footer>'
+                }
+            }
         });
+
+        new Vue({
+            el: '#app2',
+            components: {
+                'app-footer': {
+                    template: '<footer>footer</footer>'
+                }
+            }
+        })
     </script>
 </body>
+
 </html>
