[Add] event-emit.html

--- a/playground/event-emit.html
+++ b/playground/event-emit.html
@@ -48,6 +48,7 @@
                 },
                 addNum : function(){
                     this.num ++;
+                    // data 에 num 속성을 가르킴 < this >
                 }
             },
             data: {
