--- a/playground/axios.html
+++ b/playground/axios.html
@@ -30,7 +30,7 @@
                     axios.get('https://jsonplaceholder.typicode.com/users/')
                         .then(function (response) {
                             console.log(response.data);
-                            this.users = response.data;
+                            vm.users = response.data;
                         })
                         .catch(function (error) {
                             console.log(error);
